test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_function_empty_list_any.plx
pub fn main(any) i32 {
    return 0
}
